--- a/site/config.toml
+++ b/site/config.toml
@@ -3,11 +3,14 @@ languageCode = "en-us"
 title = "currencystack.io"
 Subtitle = "Your site's subtitle/tagline"
 GithubID = "currencystack"
-TwitterID = "getcurrencystack"
+twitter = "getcurrencystack"
 AnalyticsID = "Your Google Analytics tracking code"
 DisqusShortname = "Your Disqus shortname"
 Summary = true  # takes true or false
 Content = true  # takes true or false
 FooterMsg = "by PushBots Inc 2018"
 theme = "hugo-theme-slim"
-addThis = "ra-5c184c7e824cfa0a"
+[params]
+[social]
+  github           = "jpescador/hugo-future-imperfect"
+  twitter = "getcurrencystack"
