--- a/site/config.toml
+++ b/site/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://blog.currencystack.io"
+baseurl = "/"
 languageCode = "en-us"
 title = "currencystack.io"
 Subtitle = "Your site's subtitle/tagline"
@@ -11,6 +11,7 @@ Content = true  # takes true or false
 FooterMsg = "by PushBots Inc 2018"
 theme = "hugo-theme-slim"
 [params]
+fullurl="https://blog.currencystack.io/"
 [social]
   github           = "jpescador/hugo-future-imperfect"
   twitter = "getcurrencystack"
