--- a/site/config.toml
+++ b/site/config.toml
@@ -13,5 +13,5 @@ theme = "hugo-theme-slim"
 [params]
 fullurl="https://blog.currencystack.io"
 [social]
-  github           = "jpescador/hugo-future-imperfect"
-  twitter = "getcurrencystack"
+  github           = "currencystackio"
+  twitter = "currencystackio"
