--- a/site/config.toml
+++ b/site/config.toml
@@ -4,7 +4,7 @@ title = "currencystack.io"
 Subtitle = "Your site's subtitle/tagline"
 GithubID = "currencystack"
 twitter = "getcurrencystack"
-AnalyticsID = "Your Google Analytics tracking code"
+AnalyticsID = "UA-51748123-5"
 DisqusShortname = "Your Disqus shortname"
 Summary = true  # takes true or false
 Content = true  # takes true or false
