--- a/site/static/admin/config.yml
+++ b/site/static/admin/config.yml
@@ -12,7 +12,7 @@ collections: # A list of collections the CMS should be able to edit
     fields: # The fields each document in this collection have
       - {label: "Title", name: "title", widget: "string"}
       - {label: "Author", name: "author", widget: "string"}
-      - {label: "Avatar", name: "avatar", widget: "image", required: false}
+      - {label: "Avatar", name: "authorAvatar", widget: "image", required: false}
       - {label: "Publish Date", name: "date", widget: "datetime"}
       - {label: "Intro Blurb", name: "description", widget: "text"}
       - {label: "Image", name: "image", widget: "image", required: false}
