--- a/site/config.toml
+++ b/site/config.toml
@@ -29,7 +29,7 @@ paginate        = 6
   authorAvatar = "img/ghost-icon.png"
   authorLocation = "Bandung, ID"
   authorWebsite = "https://eueung.github.io"
-  authorDescription = "Clearip Team"
+  authorDescription = "Currencystack Team"
 
   pageNotFoundTitle = "404 - Page not found"
 
